# smart-doorlock

./: CMakeLists.txt  README.md  build.sh
bluetooth/: .gitignore  bluetooth.c  bluetooth.h  terminal.c
brightness/: .gitignore  cds.c  cds.h
face_recognition/: .gitignore  recognize.c  recognize.h  recognize.py
face_recognition/demo/: CMakeLists.txt  demo.c
oled/: oled.c  oled.h
oled/src/: .gitignore  demo.c  oled.c  ssd1306_i2c.c
servo/: .gitignore  lock.c  lock.h  servo.c
stepper/: .gitignore  door.c  door.h  stepper.c
thread/: main  main.c
tone/: .gitignore  music.c  music.h  soft_tone.c  tone.c
ultrasonic/: ultrasonic.c  ultrasonic.h
